--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 <%= form_with(model: post, local: true) do |form| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
@@ -14,7 +17,7 @@
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
-  </div>
+  </div><br>
 
   <div class="field">
     <%= form.label :body %>
@@ -30,3 +33,5 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+</div>
